ITI-URGENT/K8S/client-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iti-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iti-client
  template:
    metadata:
      labels:
        app: iti-client
    spec:
      containers:
      - name: iti-client
        image: your-registry/iti-client:latest
        ports:
        - containerPort: 80
