ITI-URGENT/K8S/server-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iti-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iti-server
  template:
    metadata:
      labels:
        app: iti-server
    spec:
      containers:
      - name: iti-server
        image: your-registry/iti-server:latest
        ports:
        - containerPort: 8000
