ITI-URGENT/K8S/client-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: iti-client-service
spec:
  selector:
    app: iti-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
