ITI-URGENT/K8S/server-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: iti-server-service
spec:
  selector:
    app: iti-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
