ITI-URGENT/K8S/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iti-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "your-domain.com"
      http:
        paths:
        - path: /client
          pathType: Prefix
          backend:
            service:
              name: iti-client-service
              port:
                number: 80
        - path: /server
          pathType: Prefix
          backend:
            service:
              name: iti-server-service
              port:
                number: 8000
  tls:
  - hosts:
    - "your-domain.com"
    secretName: tls-secret
